# NIEM-JSON-Spec

./: .gitignore  Makefile.in  README.md  configure  configure.ac  configure.mk  run.in
dev-4.0/: niem-json-spec.html  niem-json-spec.txt
docs/: index.md  niem-json-spec.txt
docs/draft/: README.md  niem-json-spec.html  niem-json-spec.txt
docs/v4.0/: niem-json-spec.txt
docs/v5.0/: niem-json-spec.txt
publish/: README.md  niem-json-spec.html  niem-json-spec.txt
resources/literal-to-object-conversion/: Makefile  example-1-context.jsonld  example-1-converted.jsonld  example-1.jsonld  example-1.xml
resources/literal-to-object-conversion/niem/: wantlist.xml  xml-catalog.xml
resources/literal-to-object-conversion/niem/niem-core/4.0/: niem-core.xsd
src/: aspell-exceptions.txt  macros.m4  niem-json-spec.xml.m4
v4.0/: niem-json-spec.txt
v4.0beta1/: README.md  niem-json-spec.txt
